crates/rhdl/tests/expect/roll_your_own_val_fails_original.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
     ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:127:17]
 126 │         let h = h.val();
 127 │         let j = h.val();
     ·                 ───┬───
     ·                    ╰── RHDL does not support the use of unary operators on this type
 128 │         signal(j)
     ╰────
  help: You cannot roll your own val  operator in RHDL.  You should write a kernel and call it as a regular function.
